# c-mips_compilador

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxyfile.cfg
headers/: compilador.hh  enums.hh  herramientas.hh  mapeos.hh  timer.hh  utilidades.hh
src/: compilador.cc  herramientas.cc  main.cc  utilidades.cc
test/: branchif.txt
test/input/: hello  hello.c  primo.c
test/output/: hello.asm  hello_.asm
